2018-12-07  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1175
	
	* src/complex.h, src/propagationmatrix.h, src/transmissionmatrix.h:

	Remove constexpr from member functions for ConstComplexVectorView,
	ConstComplexMatrixView, PropagationMatrix, TransmissionMatrix,
	RadiationVector. None of these functions can ever be fully evaluated
	at compile time because their input values depend on runtime values
	such as stokes_dim, number of pressure levels, number of frequencies.
	While newer compilers seem to just ignore the constexpr keyword in
	those cases, gcc 4 fails if constexpr is used inside these non-literal
	classes.

2018-12-06  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1174
	
	* src/complex.cc:  Removed some of the constexpr stuff
	that uses assert() and &.  Seems I did not learn constexpr
	correctly, since my version of gcc compiled what
	Hudson's gcc compiler does not...  I tested with clang
	and it also complains, so this must be a my-version-gcc
	error?  Now clang here compiles, so it should work?

2018-12-06  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1173
	
	* src/complex.cc,h, src/linefunctiondata.cc:
	* src/propagationmatrix.h:  Changed some const 
	functions to  constexpr functions trying to learn how 
	this keyword works
	
	* src/m_cloudradar.cc: made ghost version, iyActiveSingleScat2,
	that is trying to change iyActiveSingleScat to use my Eigen
	code path for RT.  Not tested, since there is no test for even
	iyActiveSingleScat as far as I can see...
	
	* src/m_fos.cc, src/m_transmitter.cc, src/m_rte.cc:  Separated
	cumulative transmission calculations from partial transmission
	calculations.  Because one of the experimental single scatter
	solver requires the reflected cumulative transmission, so
	there would be a lot of duplicate code without this separation.
	
	* src/transmissionmatrix.h,cc:  Some code to control
	iyActiveSingleScat2.

2018-12-04  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1172
