@@ -1,3 +1,15 @@
+2018-12-10  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>
+
+	* arts-2-3-1176
+
+	* src/m_oem.cc(OEM):
+	- Enabled calculation of gain matrix for retrievals that reach
+	  iteration or LM-gamma limit.
+
+	* 3rdparts/invlib/src/invlib/optimization/levenberg_marquardt.cpp
+	- Slightly modified iteration behavior, requiring a higher, relative
+	  cost reduction.
+
 2018-12-07  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-1175
